Rename domain to entity (#41)
* Rename domain to entity

* Rename domain to entity fix
